# lipl-storage

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  all.yaml  curl.fish  lipl.hurl  local.env  run-fs-local.sh  run-postgres-local.sh  run-redis-local.sh  run-turso-local.sh  test.sh
.cargo/: config.toml
crates/lipl-axum/: Cargo.toml
crates/lipl-axum-postgres/: Cargo.toml
crates/lipl-axum-postgres/src/: convert.rs  create_db.sql  db.rs  error.rs  lib.rs  lyric.rs  playlist.rs
crates/lipl-axum/src/: error.rs  lib.rs  message.rs  param.rs
crates/lipl-axum/src/handler/: lyric.rs  mod.rs  playlist.rs
crates/lipl-axum/tests/: 1.rs
crates/lipl-core/: Cargo.toml
crates/lipl-core/src/: disk_format.rs  disk_format_toml.rs  disk_format_yaml.rs  error.rs  ext.rs  file_error.rs  lib.rs  path_ext.rs  postgres_error.rs  redis_error.rs  reexport.rs  transaction.rs  uuid.rs  vec_ext.rs
crates/lipl-core/src/parts/: from_reader.rs  mod.rs
crates/lipl-fs-repo/: Cargo.toml
crates/lipl-fs-repo/examples/: list.rs
crates/lipl-fs-repo/src/: constant.rs  error.rs  fs.rs  io.rs  lib.rs  request.rs
crates/lipl-io/: Cargo.toml
crates/lipl-io/src/: error.rs  lib.rs
crates/lipl-io/src/io/: copy.rs  fs.rs  list.rs  lyric.rs  mod.rs  playlist.rs
crates/lipl-io/src/model/: db.rs  path_ext.rs  traits.rs
crates/lipl-io/tests/: test_get_lyrics.rs
crates/lipl-redis-repo/: Cargo.toml
crates/lipl-redis-repo/examples/: 01.rs
crates/lipl-redis-repo/src/: delete_lyric.lua  redis_repo.rs
crates/lipl-repo-fs/: Cargo.toml
crates/lipl-repo-fs/examples/: list.rs
crates/lipl-repo-fs/src/: fs.rs  io.rs  lib.rs  request.rs
crates/lipl-repo-http-server/: Cargo.toml
crates/lipl-repo-http-server/src/: constant.rs  db.rs  error.rs  filter.rs  handler.rs  lib.rs  message.rs  param.rs  recover.rs  repo.rs  serve.rs
crates/lipl-repo-memory/: Cargo.toml
crates/lipl-repo-memory/src/: lib.rs
crates/lipl-repo-postgres/: Cargo.toml
crates/lipl-repo-postgres-axum/: Cargo.toml
crates/lipl-repo-postgres-axum/src/: convert.rs  lib.rs
crates/lipl-repo-postgres/src/: convert.rs  lib.rs  macros.rs  pool.rs
crates/lipl-repo-postgres/tests/: Roodkapje.md  Sinterklaas.md  lyric_test.rs
crates/lipl-repo-redis/: Cargo.toml
crates/lipl-repo-redis/src/: lib.rs  redis_repo.rs
crates/lipl-sample-data/: Cargo.toml  build.rs
crates/lipl-sample-data/sample_data/: 't Knaapje zag een roosje staan.txt  Advocaatje ging op reis.txt  Als de grote klokke luidt.txt  Als de klok van Arnemuiden.txt  Amsterdamse grachten.txt  Breng eens een zonnetje.txt  Catootje.txt  Daar bij de waterkant.txt  Daar bij die molen.txt  Daar in dat kleine café.txt  De Wielewaal.txt  De glimlach van een kind.txt  De herdertjes lagen bij nachte.txt  De uil zat in de olmen.txt  Drie schuintamboers.txt  Een karretje op de zandweg reed.txt  Eer zij God in deze dagen.txt  Er is een kindeke geboren.txt  Faria.txt  Foxy Foxtrot.txt  Heidewietska.txt  Hoe je heette.txt  Hoe leit dit kindeke.txt  In 't groene dal.txt  In een groen knollenland.txt  Ketelbinkie.txt  Kling klokjes kling.txt  Kortjakje.txt  Meisje loos.txt  Mijn opa.txt  Nu zijt wellekome.txt  O Denneboom.txt  O Kindeke klein.txt  Op de grote stille heide.txt  Patsy.txt  Peter is mijn ideaal.txt  Roodkapje.txt  Schaapje witte wol.txt  Sinterklaas.txt  Sofietje.txt  (+7 more)
crates/lipl-sample-data/src/: lib.rs
crates/lipl-server-axum/: Cargo.toml
crates/lipl-server-axum/src/: constant.rs  environment.rs  error.rs  lib.rs  lipl_server_axum.rs  lipl_server_axum_fs.rs  lipl_server_axum_postgres.rs  main.rs  param.rs
crates/lipl-server-axum/tests/: 1.rs
crates/lipl-server-warp/: Cargo.toml
crates/lipl-server-warp/src/: db.rs  error.rs  filter.rs  handler.rs  lib.rs  model.rs  param.rs  recover.rs  repo.rs  serve.rs
lipl-axum/: Cargo.toml
lipl-axum-postgres/: Cargo.toml
lipl-axum-postgres/src/: convert.rs  create_db.sql  error.rs  ext.rs  lib.rs  lyric.rs  playlist.rs
lipl-axum/src/: constant.rs  error.rs  ext.rs  lib.rs  lyric.rs  main.rs  playlist.rs
lipl-axum/src/handler/: lyric.rs  mod.rs  playlist.rs
lipl-axum/src/lyric/: convert.rs  db.rs  handler.rs  mod.rs  sql.rs
lipl-axum/src/playlist/: convert.rs  db.rs  handler.rs  mod.rs  sql.rs
lipl-axum/tests/: 1.rs
lipl-core/: Cargo.toml
lipl-core/examples/: 01.rs
lipl-core/src/: lib.rs
lipl-fs-repo/: Cargo.toml
lipl-fs-repo/examples/: list.rs
lipl-fs-repo/src/: async_recursion.rs  disk_format.rs  elapsed.rs  error.rs  fs.rs  io.rs  lib.rs  model.rs  request.rs
lipl-io/: Cargo.toml
lipl-io/examples/: lipl-db-list.rs
lipl-io/src/: lib.rs
lipl-io/src/io/: copy.rs  fs.rs  list.rs  lyric.rs  mod.rs  playlist.rs  zip.rs
lipl-io/src/model/: db.rs  err.rs  lyric.rs  mod.rs  pathbuf.rs  playlist.rs  summary.rs  traits.rs  uuid.rs
lipl-io/tests/: test_get_lyrics.rs  test_to_parts.rs
lipl-io/tests/fs/: 7yyNirdwBpAh3BdoGxvJ25.txt
lipl-postgres-repo/: Cargo.toml
lipl-postgres-repo/src/: config.rs  connection.rs  error.rs  lib.rs  macros.rs  pool.rs  source.rs
lipl-postgres-repo/src/db/: mod.rs
lipl-postgres-repo/tests/: Molen.md  lyric_test.rs
lipl-repo/: Cargo.toml  curl.fish
lipl-repo-http-server/: Cargo.toml
lipl-repo-http-server/src/: db.rs  error.rs  filter.rs  handler.rs  lib.rs  message.rs  param.rs  recover.rs  serve.rs
lipl-repo/src/: constant.rs  db.rs  lyric_filter.rs  lyric_handler.rs  main.rs  model.rs  param.rs  playlist_filter.rs  playlist_handler.rs  serve.rs
lipl-types/: Cargo.toml
lipl-types/examples/: 01.rs
lipl-types/src/: disk_format.rs  elapsed.rs  error.rs  ext.rs  lib.rs  path_ext.rs  request.rs  uuid.rs  uuid_wrapper.rs
lipl-upload/: Cargo.toml
lipl-upload/src/: api.rs  args.rs  client.rs  error.rs  fs.rs  main.rs  model.rs  text.rs
rest-api-client/: Cargo.toml
rest-api-client/src/: http_client.rs  lib.rs
timeit/: Cargo.toml  LICENSE  README.md
timeit-test/: Cargo.toml
timeit-test/src/: main.rs
timeit/src/: lib.rs  timeit.rs
timeit/tests/: timeit.rs
yaml/: Cargo.toml
yaml/src/: main.rs
(+252 files in other folders)
