[workspace]
resolver = "2"
members = [
    "crates/lipl-core",
    "crates/lipl-sample-data",
    "crates/lipl-server-axum",
    "crates/lipl-storage-fs",
    "crates/lipl-storage-memory",
    "crates/lipl-storage-postgres-axum",
    "crates/lipl-storage-redis"
]

[workspace.package]
authors = ["Paul Min"]
edition = "2021"
homepage = "https://paulusminus.github.io/lipl-book/"
license = "MIT"
repository = "https://github.com/paulusminus/lipl-storage/"
version = "0.2.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
