[workspace]
resolver = "2"
members = [
    "crates/build-bins",
    "crates/lipl-core",
    "crates/lipl-sample-data",
    "crates/lipl-storage-server",
    "crates/lipl-storage-fs",
    "crates/lipl-storage-memory",
    "crates/lipl-storage-postgres",
    "crates/lipl-storage-redis"
]

[workspace.package]
authors = ["Paul Min"]
edition = "2021"
homepage = "https://paulusminus.github.io/lipl-book/"
license = "MIT"
repository = "https://github.com/paulusminus/lipl-storage/"
version = "0.4.0"

[profile.release]
lto = true
strip = true
opt-level = "z"
