[workspace]
resolver = "2"
members = [
    "crates/lipl-core",
    "crates/lipl-sample-data",
    "crates/lipl-storage-server",
    "crates/lipl-storage-fs",
    "crates/lipl-storage-memory",
    "crates/lipl-storage-postgres",
    "crates/lipl-storage-redis"
]

[workspace.package]
authors = ["Paul Min"]
edition = "2021"
homepage = "https://www.paulmin.nl/lipl/"
license = "MIT"
repository = "https://github.com/paulusminus/lipl-storage/"
version = "0.4.13"

[profile.release]
lto = true
strip = true
opt-level = "z"
