[package]
name = "lipl-axum-postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum-core = "0.3.0-rc.2"
bb8 = "0.8"
bb8-postgres = "0.8"
futures-util = "0.3"
http = "0.2"
lipl-types = { path = "../lipl-types" }
parts = { path = "../parts" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tracing = "0.1.37"
uuid = "1.2"
