[package]
name = "lipl-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.0-rc.3"
futures-util = "0.3.25"
hyper = "0.14"
lipl-axum-postgres = { path = "../lipl-axum-postgres" }
lipl-core = { path = "../lipl-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.3", features = ["compression-br", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.2.1"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
