[package]
name = "lipl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.59", features = ["std"] }
async-trait = "0.1"
bincode = "1"
bs58 = "0.4"
etag = "3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_with = "2.0"
thiserror = "1"
timeit = { path = "../timeit" }
uuid = { version = "1.0", features = ["v4"] }
