[package]
name = "lipl-fs-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
# async-recursion = "0.3"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }