[package]
name = "lipl-io"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
# bs58 = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lipl-types = { path = "../lipl-types/" }

[dev-dependencies]
clap = { version = "3.0.0-rc.1", features = ["derive"] }
