[package]
name = "lipl-io"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
async-trait = "0.1.57"
lipl-types = { path = "../lipl-types/" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", default-features = false, features = ["sync"] }
