[package]
name = "lipl-repo"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
env_logger = "0.8"
lipl-io = { path = "../lipl-io" }
log = "0.4"
serde = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-core", "signal", "sync"] }
warp = "0.2"
