[package]
name = "lipl-repo"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
env_logger = "0.9"
lipl-io = { path = "../lipl-io" }
log = "0.4"
serde = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "signal", "sync"] }
warp = { version = "0.3", default-features = false }
