[package]
name = "lipl-upload"
description = "Commandline utility to upload text files to http server"
authors = ["Paul Min <info@paulmin.nl>"]
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
flate2 = { version = "1", default-features = false, features = ["zlib"] }
futures = "0.3"
hyper = { version = "0.14", default-features = false, features = ["client", "http2"] }
hyper-rustls = { version = "0.23", features = ["webpki-roots"] }
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
