[package]
name = "lipl-upload"
description = "Commandline utility to upload text files to http server"
authors = ["Paul Min <info@paulmin.nl>"]
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo"] }
futures = "0.3"
lazy_static = "1"
lipl-types = { path = "../lipl-types" }
regex = "1"
parts = { path = "../parts" }
rest-api-client = { path = "../rest-api-client" }
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["fs"] }
