[package]
name = "rest-api-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
flate2 = "1.0.24"
hyper = "0.14.20"
hyper-rustls = { version = "0.23.0", features = ["webpki-roots"] }
serde = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.34"
