[package]
name = "timeit"
version = "0.2.0"
edition = "2021"
authors = ["Paul Min <info@paulmin.nl>"]
license = "MIT"
homepage = "https://www.paulmin.nl"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }

[package.metadata.docs.rs]
all-features = true
