[package]
name = "lipl-axum-postgres"
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
# bb8 = "0.8"
bb8-postgres = "0.8"
lipl-core = { path = "../lipl-core" }
parts = { path = "../parts" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tracing = "0.1.37"
