[package]
name = "lipl-axum"
version = "0.1.1"
edition = "2021"

[features]
default = ["memory"]
postgres = ["dep:lipl-axum-postgres"]
memory = ["dep:lipl-axum-inmemorydb"]

[dependencies]
axum = { version = "0.6", features = ["headers", "query"] }
futures-util = "0.3.25"
hyper = "0.14"
lipl-axum-postgres = { path = "../lipl-axum-postgres", optional = true }
lipl-axum-inmemorydb = { path = "../lipl-axum-inmemorydb", optional = true }
lipl-core = { path = "../lipl-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["compression-br", "compression-gzip", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.2"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
