[package]
authors.workspace = true
description = "Models for Lipl Storage"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-core"
repository.workspace = true
version.workspace = true

[features]
transaction = [
    "dep:futures-channel",
    "dep:chrono",
    "dep:serde_json",
]

[dependencies]
# bincode = { version = "2.0.1", features = ["serde"] }
bs58 = "0.5.1"
chrono = { version = "0.4.41", optional = true }
etag = "4.0.0"
futures-channel = { version = "0.3.31", optional = true }
# postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
serde_with = { version = "3.14.0", default-features = false, features = [
    "macros",
] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt"], optional = true }
trait-variant = "0.1.2"
uuid = { version = "1.17.0", features = ["v4"] }
toml_edit = { version = "0.23.0", features = ["serde"] }
