[package]
name = "lipl-fs-repo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.59"
async-trait = "0.1"
futures = "0.3"
lipl-core = { path = "../lipl-core", features = ["file"] }
thiserror = "1.0.32"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
