[package]
name = "lipl-io"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
async-trait = "0.1.57"
lipl-core = { path = "../lipl-core/" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0.37"
tokio = { version = "1", default-features = false, features = ["sync"] }
tracing = "0.1"
