[package]
name = "lipl-repo-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
lipl-core = { path = "../lipl-core", features = ["file", "transaction"] }
lipl-util = { path = "../lipl-util" }
serde = { version = "1.0.152", features = ["derive"] }
# thiserror = "1.0.32"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
