[package]
name = "lipl-repo-http-server"
version = "0.1.7"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[features]
default = ["file", "postgres"]
postgres = ["dep:lipl-postgres-repo"]
file = ["dep:lipl-fs-repo"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
# clap_03 = { package = "clap", version = "3", features = ["derive"] }
clap = { version = "4", features = ["cargo", "derive"] }
lipl-core = { path = "../lipl-core" }
lipl-fs-repo = { path = "../lipl-fs-repo", optional = true }
lipl-postgres-repo = { path = "../lipl-postgres-repo", optional = true }
serde = "1.0"
thiserror = "1.0.32"
tokio = { version = "1.0", features = ["macros", "rt", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
warp = { version = "0.3", default-features = false }
futures = "0.3.23"
