[package]
license = "MIT"
name = "lipl-repo-postgres-axum"
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8-postgres = "0.8"
futures-util = "0.3"
lipl-core = { path = "../lipl-core" }
lipl-util = { path = "../lipl-util" }
parts = { path = "../parts" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tracing = "0.1.37"
