[package]
authors.workspace = true
description = "Axum json api with postgres storage"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-repo-postgres-axum"
repository.workspace = true
version.workspace = true

[dependencies]
async-trait = "0.1"
bb8-postgres = "0.8"
futures-util = "0.3"
lipl-core = { path = "../lipl-core" }
lipl-util = { path = "../lipl-util" }
parts = { path = "../parts" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
tracing = "0.1.37"
