[package]
license = "MIT"
name = "lipl-repo-postgres"
version = "0.1.0"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8-postgres = { version = "0.8", features = ["with-uuid-1"] }
futures-util = "0.3"
lipl-core = { path = "../lipl-core" }
parts = { path = "../parts" }
thiserror = "1.0.32"
tracing = "0.1"
uuid = "1"

[dev-dependencies]
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
