[package]
name = "lipl-repo-redis"
version = "0.1.1"
authors = ["Paul Min <info@paulmin.nl>"]
edition = "2021"

[dependencies]
lipl-core = { path = "../lipl-core", features = ["redis"] }
parts = { path = "../parts" }
async-trait = "0.1.61"
bb8-redis = "0.12.0"
futures-util = "0.3.25"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.24", features = ["rt", "macros"] }
tracing-subscriber = "0.3.16"
