[package]
authors.workspace = true
build = "build.rs"
description = "Lipl sample data for demo's and testing"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-sample-data"
repository.workspace = true
version.workspace = true

[dependencies]
lipl-core = { path = "../lipl-core" }

[build-dependencies]
quote = "1.0.40"
rust-format = { version = "0.3.4", features = ["token_stream"] }
