[package]
name = "lipl-server-axum"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "lipl-server-axum"
path = "src/lipl_server_axum.rs"

[[bin]]
name = "lipl-server-axum-postgres"
path = "src/lipl_server_axum_postgres.rs"
required-features = ["postgres"]

[features]
default = ["memory"]
postgres = ["dep:lipl-repo-postgres-axum", "dep:lipl-core", "lipl-core?/postgres"]
memory = ["dep:lipl-repo-memory", "dep:lipl-core"]

[dependencies]
axum = { version = "0.6", features = ["headers", "query"] }
clap = { version = "4.1.1", features = ["derive"] }
futures-util = "0.3.25"
hyper = "0.14"
lipl-repo-postgres-axum = { path = "../lipl-repo-postgres-axum", optional = true }
lipl-repo-memory = { path = "../lipl-repo-memory", optional = true }
lipl-core = { path = "../lipl-core", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-br", "compression-gzip", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.2"
async-trait = "0.1.62"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
