[package]
authors.workspace = true
description = "Axum webserver json api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-server-axum"
repository.workspace = true
version.workspace = true

[[bin]]
name = "lipl-server-axum-fs"
path = "src/lipl_server_axum_fs.rs"
required-features = ["fs"]

[[bin]]
name = "lipl-server-axum-postgres"
path = "src/lipl_server_axum_postgres.rs"
required-features = ["postgres"]

[features]
default = ["memory"]
postgres = ["dep:lipl-storage-postgres", "dep:lipl-core"]
memory = ["dep:lipl-storage-memory", "dep:lipl-core"]
fs = ["dep:lipl-storage-fs", "dep:lipl-core"]

[dependencies]
axum = { version = "0.6", features = ["headers", "query"] }
# clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hyper = "0.14"
lipl-storage-postgres = { version = "0.2.0", path = "../lipl-storage-postgres", optional = true }
lipl-storage-memory = { version = "0.2.0", path = "../lipl-storage-memory", optional = true }
lipl-storage-fs = { version = "0.2.0", path = "../lipl-storage-fs", optional = true }
lipl-core = { version = "0.2.0", path = "../lipl-core", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["compression-br", "compression-gzip", "trace", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1"
async-trait = "0.1"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.4", features = ["full"] }
