[package]
authors.workspace = true
description = "Warp webserver json api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-server-warp"
repository.workspace = true
version.workspace = true

[features]
default = ["memory"]
postgres = ["dep:lipl-repo-postgres"]
file = ["dep:lipl-repo-fs"]
memory = ["dep:lipl-repo-memory"]
redis = ["dep:lipl-repo-redis"]

[dependencies]
# anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4", features = ["cargo", "derive"] }
lipl-repo-memory = { path = "../lipl-repo-memory", optional = true }
lipl-core = { path = "../lipl-core" }
lipl-repo-fs = { path = "../lipl-repo-fs", optional = true }
lipl-repo-postgres = { path = "../lipl-repo-postgres", optional = true }
lipl-repo-redis = { path = "../lipl-repo-redis", optional = true }
serde = "1.0"
thiserror = "1.0.32"
tokio = { version = "1.0", features = ["macros", "rt", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
warp = { version = "0.3", default-features = false }
futures = "0.3.23"
