[package]
authors.workspace = true
description = "Warp webserver json api"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "lipl-server-warp"
repository.workspace = true
version.workspace = true

[features]
default = ["memory"]
postgres = ["dep:lipl-storage-postgres"]
file = ["dep:lipl-storage-fs"]
memory = ["dep:lipl-storage-memory"]
redis = ["dep:lipl-storage-redis"]

[dependencies]
# anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4", features = ["cargo", "derive"] }
lipl-storage-memory = { path = "../lipl-storage-memory", optional = true }
lipl-core = { path = "../lipl-core" }
lipl-storage-fs = { version = "0.2", path = "../lipl-storage-fs", optional = true }
lipl-storage-postgres = { path = "../lipl-storage-postgres", optional = true }
lipl-storage-redis = { path = "../lipl-storage-redis", optional = true }
serde = "1.0"
thiserror = "1.0.32"
tokio = { version = "1.0", features = ["macros", "rt", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
warp = { version = "0.3", default-features = false }
futures = "0.3.23"
